syntax = "proto3";

package malware_scanner;
option go_package = "github.com/deepfence/agent-plugin-grpc/proto";

service MalwareScanner {
    rpc FindMalwareInfo(MalwareRequest) returns (MalwareResult);
}
message MalwareDockerImage {
    string name = 1;
    string id = 2;
}

message MalwareContainer {
    string id = 1;
    string namespace = 2;
}

message MalwareRequest {
    oneof input {
        string path = 1;
        MalwareDockerImage image = 2;
        MalwareContainer container = 3;
    }
}

message MalwareResult {
    oneof input {
        string path = 1;
        MalwareDockerImage image = 2;
        MalwareContainer container = 3;
    }
    string timestamp = 4;
    repeated MalwareInfo malwares = 5;
}

message MalwareInfo {
    string    image_layer_id = 1;
    string    rule_name = 2;
    repeated  string  strings_to_match = 3;
    double    severity_score = 4;
    string    file_severity = 5;
    double   file_sev_score = 6;
    string    complete_filename = 7;
    repeated string  meta= 8;
    map<string,string> meta_rules = 9;
    string    summary = 10;
}

